--- a/lightblue-ldap-config/pom.xml
+++ b/lightblue-ldap-config/pom.xml
@@ -19,20 +19,41 @@
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
     <modelVersion>4.0.0</modelVersion>
-    
+  
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
-        <artifactId>ldap-pom</artifactId>
+        <artifactId>lightblue-ldap-pom</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    
-    <artifactId>ldap-test</artifactId>
-    
+  
+    <artifactId>lightblue-ldap-config</artifactId>
+  
     <dependencies>
         <dependency>
-            <groupId>com.unboundid</groupId>
-            <artifactId>unboundid-ldapsdk</artifactId>
+            <groupId>com.redhat.lightblue.config</groupId>
+            <artifactId>core-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.redhat.lightblue.ldap</groupId>
+            <artifactId>lightblue-ldap-crud</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.redhat.lightblue.ldap</groupId>
+            <artifactId>lightblue-ldap-metadata</artifactId>
+        </dependency>
+        
+         <dependency>
+             <groupId>com.unboundid</groupId>
+             <artifactId>unboundid-ldapsdk</artifactId>
+         </dependency>
+         
+         <dependency>
+             <groupId>com.redhat.lightblue.ldap</groupId>
+             <artifactId>lightblue-ldap-test</artifactId>
+             <scope>test</scope>
         </dependency>
     </dependencies>
+    
 </project>
