--- a/lightblue-ldap-hystrix/pom.xml
+++ b/lightblue-ldap-hystrix/pom.xml
@@ -15,45 +15,25 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+    along with this program.  If not, see <http://www.gnu.org/licenses />.
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
+
     <modelVersion>4.0.0</modelVersion>
-  
+
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
-        <artifactId>ldap-pom</artifactId>
+        <artifactId>lightblue-ldap-pom</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-  
-    <artifactId>ldap-config</artifactId>
-  
+    
+    <artifactId>lightblue-ldap-hystrix</artifactId>
+    
     <dependencies>
         <dependency>
-            <groupId>com.redhat.lightblue.config</groupId>
-            <artifactId>core-config</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.redhat.lightblue.ldap</groupId>
-            <artifactId>ldap-crud</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.redhat.lightblue.ldap</groupId>
-            <artifactId>ldap-metadata</artifactId>
-        </dependency>
-        
-         <dependency>
-             <groupId>com.unboundid</groupId>
-             <artifactId>unboundid-ldapsdk</artifactId>
-         </dependency>
-         
-         <dependency>
-             <groupId>com.redhat.lightblue.ldap</groupId>
-             <artifactId>ldap-test</artifactId>
-             <scope>test</scope>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-core</artifactId>
         </dependency>
     </dependencies>
-    
 </project>
