--- a/lightblue-ldap-test/pom.xml
+++ b/lightblue-ldap-test/pom.xml
@@ -19,22 +19,25 @@
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
     <modelVersion>4.0.0</modelVersion>
-
+    
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
-        <artifactId>ldap-pom</artifactId>
+        <artifactId>lightblue-ldap-pom</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
-    <artifactId>ldap-metadata</artifactId>
-
+    
+    <artifactId>lightblue-ldap-test</artifactId>
+    
     <dependencies>
         <dependency>
-            <groupId>com.redhat.lightblue</groupId>
-            <artifactId>metadata</artifactId>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
-
 </project>
