--- a/lightblue-ldap-metadata/pom.xml
+++ b/lightblue-ldap-metadata/pom.xml
@@ -35,6 +35,10 @@
             <groupId>com.redhat.lightblue</groupId>
             <artifactId>metadata</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.redhat.lightblue.ldap</groupId>
+            <artifactId>lightblue-ldap-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
