start working on crud and hystrix

--- a/lightblue-ldap-hystrix/pom.xml
+++ b/lightblue-ldap-hystrix/pom.xml
@@ -35,5 +35,16 @@
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.redhat.lightblue.ldap</groupId>
+            <artifactId>lightblue-ldap-test</artifactId>
+            <scope>test</scope>
+       </dependency>
     </dependencies>
 </project>
