--- a/lightblue-ldap-integration-test/pom.xml
+++ b/lightblue-ldap-integration-test/pom.xml
@@ -20,36 +20,39 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   
-    <modelVersion>4.0.0</modelVersion>
-    
-    <parent>
-        <groupId>com.redhat.lightblue.ldap</groupId>
-        <artifactId>lightblue-ldap-pom</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-    
-    <artifactId>lightblue-ldap-crud</artifactId>
-    
-    <dependencies>
-        <dependency>
-            <groupId>com.redhat.lightblue</groupId>
-            <artifactId>crud</artifactId>
-        </dependency>
-        
+  <modelVersion>4.0.0</modelVersion>
+  
+  <parent>
+    <groupId>com.redhat.lightblue.ldap</groupId>
+    <artifactId>lightblue-ldap-pom</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  
+  <artifactId>lightblue-ldap-integration-test</artifactId>
+  
+  <dependencies>
         <dependency>
             <groupId>com.redhat.lightblue.ldap</groupId>
-            <artifactId>lightblue-ldap-common</artifactId>
+            <artifactId>lightblue-ldap-config</artifactId>
+            <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.redhat.lightblue.ldap</groupId>
-            <artifactId>lightblue-ldap-hystrix</artifactId>
-        </dependency>
-        
         <dependency>
             <groupId>com.redhat.lightblue.ldap</groupId>
             <artifactId>lightblue-ldap-test</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.redhat.lightblue.mongo</groupId>
+            <artifactId>mongo-config</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.redhat.lightblue.mongo</groupId>
+            <artifactId>mongo-test</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-  
 </project>
