--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
     
     <properties>
         <lightblue-core.version>1.3.0-SNAPSHOT</lightblue-core.version>
+        
+        <slf4j.version>1.7.7</slf4j.version>
     </properties>
     
     <modules>
@@ -53,12 +55,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.7</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <!-- Global Test Dependencies -->
@@ -150,7 +147,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.7.7</version>
+                <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
