--- a/lightblue-ldap-integration-test/pom.xml
+++ b/lightblue-ldap-integration-test/pom.xml
@@ -30,6 +30,10 @@
   
   <artifactId>lightblue-ldap-integration-test</artifactId>
   
+  <properties>
+        <lightblue.mongo.version>1.3.0-SNAPSHOT</lightblue.mongo.version>
+  </properties>
+  
   <dependencies>
         <dependency>
             <groupId>com.redhat.lightblue.ldap</groupId>
@@ -45,13 +49,13 @@
         <dependency>
             <groupId>com.redhat.lightblue.mongo</groupId>
             <artifactId>mongo-config</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <version>${lightblue.mongo.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.redhat.lightblue.mongo</groupId>
             <artifactId>mongo-test</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <version>${lightblue.mongo.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
