--- a/lightblue-ldap-crud/pom.xml
+++ b/lightblue-ldap-crud/pom.xml
@@ -33,7 +33,7 @@
     <dependencies>
         <dependency>
             <groupId>com.redhat.lightblue</groupId>
-            <artifactId>crud</artifactId>
+            <artifactId>lightblue-core-crud</artifactId>
         </dependency>
         
         <dependency>
