--- a/lightblue-ldap-metadata/pom.xml
+++ b/lightblue-ldap-metadata/pom.xml
@@ -33,7 +33,7 @@
     <dependencies>
         <dependency>
             <groupId>com.redhat.lightblue</groupId>
-            <artifactId>metadata</artifactId>
+            <artifactId>lightblue-core-metadata</artifactId>
         </dependency>
         
         <dependency>
