--- a/lightblue-ldap-integration-test/pom.xml
+++ b/lightblue-ldap-integration-test/pom.xml
@@ -30,10 +30,6 @@
     
     <artifactId>lightblue-ldap-integration-test</artifactId>
     
-    <properties>
-          <lightblue.mongo.version>1.3.0-SNAPSHOT</lightblue.mongo.version>
-    </properties>
-    
     <dependencies>
         <dependency>
             <groupId>com.redhat.lightblue.ldap</groupId>
@@ -49,13 +45,13 @@
         <dependency>
             <groupId>com.redhat.lightblue.mongo</groupId>
             <artifactId>lightblue-mongo-config</artifactId>
-            <version>${lightblue.mongo.version}</version>
+            <version>1.3.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.redhat.lightblue.mongo</groupId>
             <artifactId>lightblue-mongo-test</artifactId>
-            <version>${lightblue.mongo.version}</version>
+            <version>1.3.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
