--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 after_success:
 - '[[ $TRAVIS_BRANCH == "master" ]] && [[ $TRAVIS_JDK_VERSION == "openjdk7" ]] &&
   { mvn clean deploy -DskipTests; };'
-- mvn clean cobertura:cobertura coveralls:cobertura
+- mvn clean verify cobertura:cobertura coveralls:report
 notifications:
   email: false
   irc:
