--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
     
     <properties>
         <!-- Sonar -->
-        <sonar.exclusions>**/*Test.java,**/*Exception.java</sonar.exclusions>
+        <sonar.exclusions>**/*Test.java,**/*Exception.java,**/com/redhat/lightblue/ldap/test/*.java</sonar.exclusions>
         <sonar.jdbc.url>jdbc:mysql://127.0.0.1:3306/sonar?useUnicode=true&amp;characterEncoding=utf8&amp;rewriteBatchedStatements=true</sonar.jdbc.url>
         <sonar.jdbc.username>sonar</sonar.jdbc.username>
         <sonar.jdbc.password>sonar</sonar.jdbc.password>
