use mongo test controller

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,14 @@
                 <scope>test</scope>
             </dependency>
             
+            <!-- Lightblue Mongo -->
+            <dependency>
+                <groupId>com.redhat.lightblue.mongo</groupId>
+                <artifactId>lightblue-mongo-test</artifactId>
+                <version>1.3.0-SNAPSHOT</version>
+                <scope>test</scope>
+            </dependency>
+            
             <!-- 3rd Party -->
             <dependency>
                 <groupId>com.unboundid</groupId>
