--- a/lightblue-ldap-test/pom.xml
+++ b/lightblue-ldap-test/pom.xml
@@ -43,5 +43,11 @@
             <artifactId>junit</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.redhat.lightblue.mongo</groupId>
+            <artifactId>lightblue-mongo-test</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        
     </dependencies>
 </project>
