--- a/lightblue-ldap-hystrix/pom.xml
+++ b/lightblue-ldap-hystrix/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
         <artifactId>lightblue-ldap-pom</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
     
     <artifactId>lightblue-ldap-hystrix</artifactId>
