--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <groupId>com.redhat.lightblue.ldap</groupId>
     <artifactId>lightblue-ldap-pom</artifactId>
     <name>lightblue-ldap: ${project.groupId}|${project.artifactId}</name>
-    <version>0.9.0</version>
+    <version>0.9.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Lightblue LDAP implementation</description>
     
@@ -51,7 +51,7 @@
         <connection>scm:git:https://github.com/lightblue-platform/lightblue-ldap.git</connection>
         <developerConnection>scm:git:git@github.com:lightblue-platform/lightblue-ldap.git</developerConnection>
         <url>https://github.com/lightblue-platform/lightblue-ldap</url>
-        <tag>V0.9.0</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <distributionManagement>
@@ -118,17 +118,17 @@
             <dependency>
                 <groupId>com.redhat.lightblue</groupId>
                 <artifactId>lightblue-core-config</artifactId>
-                <version>1.3.0</version>
+                <version>1.4.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.redhat.lightblue</groupId>
                 <artifactId>lightblue-core-crud</artifactId>
-                <version>1.3.0</version>
+                <version>1.4.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.redhat.lightblue</groupId>
                 <artifactId>lightblue-core-metadata</artifactId>
-                <version>1.3.0</version>
+                <version>1.4.0-SNAPSHOT</version>
             </dependency>
             
             <!-- Lightblue Ldap -->
@@ -204,7 +204,7 @@
             <dependency>
                 <groupId>com.redhat.lightblue</groupId>
                 <artifactId>lightblue-core-test</artifactId>
-                <version>1.3.0</version>
+                <version>1.4.0-SNAPSHOT</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
