--- a/lightblue-ldap-test/pom.xml
+++ b/lightblue-ldap-test/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
         <artifactId>lightblue-ldap-pom</artifactId>
-        <version>0.9.2-SNAPSHOT</version>
+        <version>0.9.2</version>
     </parent>
     
     <artifactId>lightblue-ldap-test</artifactId>
