--- a/lightblue-ldap-crud/pom.xml
+++ b/lightblue-ldap-crud/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
         <artifactId>lightblue-ldap-pom</artifactId>
-        <version>0.9.2</version>
+        <version>0.9.3-SNAPSHOT</version>
     </parent>
     
     <artifactId>lightblue-ldap-crud</artifactId>
