--- a/lightblue-ldap-config/pom.xml
+++ b/lightblue-ldap-config/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
         <artifactId>lightblue-ldap-pom</artifactId>
-        <version>0.9.3-SNAPSHOT</version>
+        <version>1.6.0</version>
     </parent>
   
     <artifactId>lightblue-ldap-config</artifactId>
