--- a/lightblue-ldap-common/pom.xml
+++ b/lightblue-ldap-common/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
         <artifactId>lightblue-ldap-pom</artifactId>
-        <version>1.6.0</version>
+        <version>1.7.0-SNAPSHOT</version>
       </parent>
       
       <artifactId>lightblue-ldap-common</artifactId>
