--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,8 @@
         <sonar.host.url>http://127.0.0.1:8080</sonar.host.url>
         <sonar.projectName>lightblue-ldap</sonar.projectName>
 
-        <lightblue.core.version>1.10.0-SNAPSHOT</lightblue.core.version>
-        <lightblue.mongo.version>1.10.0-SNAPSHOT</lightblue.mongo.version>
+        <lightblue.core.version>1.11.0-SNAPSHOT</lightblue.core.version>
+        <lightblue.mongo.version>1.11.0-SNAPSHOT</lightblue.mongo.version>
     </properties>
     
     <modules>
@@ -170,7 +170,7 @@
             <!-- Lightblue Mongo -->
             <dependency>
                 <groupId>com.redhat.lightblue.mongo</groupId>
-                <artifactId>lightblue-mongo-config</artifactId>
+                <artifactId>lightblue-mongo</artifactId>
                 <version>${lightblue.mongo.version}</version>
             </dependency>
             <dependency>
